syntax = "proto3";

// Object 

package MahasiswaPackage;

message Mahasiswa {
  int32 id_mahasiswa = 1;
  string nama = 2;
  string nrp = 3;
  double nilai = 4;
}

message MahasiswaList {
  repeated Mahasiswa mahasiswa = 1;
}

message MahasiswaId {
  string nama = 2;
}

message MahasiswaUpdateRequest {
  string nama = 1;
  string nilai = 2;
}

message Empty {}

// Service 
service MahasiswaService {
  // Create 
  rpc AddMahasiswa (Mahasiswa) returns (Mahasiswa) {}
  // Read 
  rpc GetAll (Empty) returns (MahasiswaList) {}
  rpc GetMahasiswa (MahasiswaId) returns (Mahasiswa) {}
  // Update
  rpc UpdateMahasiswa(MahasiswaUpdateRequest) returns (Mahasiswa) {}
  // Delete
  rpc DeleteMahasiswa (MahasiswaId) returns (Empty) {}
}